Build flatpak with boost and SDL2 as deps (something else is missing)

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ doc/
 # Clion
 .idea/
 cmake-build-debug/
+
+# Test apps
+*.gb
+*.sav
+
+# Temporary files
+.cache/
+.bash_history
+.flatpak-builder/
